CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3 FATAL_ERROR)
PROJECT(simple-qt)
INCLUDE(../../../cmake/commonconf.cmake)

MESSAGE(STATUS "Configuring Simple-Qt Application")

SET(VRN_SIMPLEQT_SOURCES
    simple-qt.cpp
)

SET(VRN_SIMPLEQT_HEADERS 
)

# find Qt library
SET(VRN_QT_COMPONENTS Gui Widgets Svg)
FIND_PACKAGE(Qt5Core ${VRN_REQUIRED_QT_VERSION} REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS ${VRN_QT_COMPONENTS} REQUIRED)
# create list of libraries
set(QT_LIBRARIES Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Svg ${QT5SVG_LIBRARIES})
set(QT_INCLUDE_DIRECTORIES ${Qt5Core_INCLUDES} ${Qt5Gui_INCLUDES} ${Qt5Widgets_INCLUDES} ${Qt5Svg_INCLUDES})

# Qt moc (currently not required)
#QT4_WRAP_CPP(VRN_SIMPLEQT_MOC_SOURCES ${VRN_SIMPLEQT_HEADERS})
#LIST(APPEND VRN_SIMPLEQT_SOURCES ${VRN_SIMPLEQT_MOC_SOURCES})
    
ADD_EXECUTABLE(simple-qt 
    ${VRN_SIMPLEQT_SOURCES} ${VRN_SIMPLEQT_HEADERS} 
) 
ADD_DEFINITIONS(${VRN_DEFINITIONS} ${VRN_MODULE_DEFINITIONS})
INCLUDE_DIRECTORIES(${VRN_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(simple-qt tgt voreen_core voreen_qt ${VRN_EXTERNAL_LIBRARIES})

# add Qt dependency
INCLUDE_DIRECTORIES(${QT_INCLUDE_DIRECTORIES})
ADD_DEFINITIONS(${QT_DEFINITIONS})
TARGET_LINK_LIBRARIES(simple-qt ${QT_LIBRARIES})
