CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3 FATAL_ERROR)
PROJECT(voreenblastest)
INCLUDE(../../../cmake/commonconf.cmake)

MESSAGE(STATUS "Configuring VoreenBlasTest Application")

IF(NOT VRN_MODULE_OPENCL)
    MESSAGE(FATAL_ERROR "OpenCL module required")
ENDIF()

ADD_EXECUTABLE(voreenblastest voreenblastest.cpp) 
ADD_DEFINITIONS(${VRN_DEFINITIONS} ${VRN_MODULE_DEFINITIONS})
INCLUDE_DIRECTORIES(${VRN_INCLUDE_DIRECTORIES})
TARGET_LINK_LIBRARIES(voreenblastest tgt voreen_core ${VRN_EXTERNAL_LIBRARIES})
